@@ -18,6 +18,7 @@
           incompatibility issues in some cases. (t0m)
         - Additional tests for setup_stats method. (t0m)
         - Fix log levels in Catalyst::Log to be properly additive. (t0m)
+        - Fix RT#43375 by sorting results before testing them (t0m)
 
 5.80002 2009-04-22 01:28:36
         - Fix CATALYST_DEBUG and MYAPP_DEBUG environment variables
